--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "agusprema/filament-webdefault",
+    "description": "This is my package filament-webdefault",
     "keywords": [
-        ":vendor_name",
+        "agusprema",
         "laravel",
-        ":package_slug"
+        "filament-webdefault"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/agusprema/filament-webdefault",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "agusprema",
+            "email": "agusprema@gmail.com",
             "role": "Developer"
         }
     ],
@@ -38,13 +38,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "webdefault\\FilamentWebdefault\\": "src",
+            "webdefault\\FilamentWebdefault\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "webdefault\\FilamentWebdefault\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -67,10 +67,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "webdefault\\FilamentWebdefault\\FilamentWebdefaultServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "FilamentWebdefault": "webdefault\\FilamentWebdefault\\Facades\\FilamentWebdefault"
             }
         }
     },
